--- a/frontend/src/Components/LeagueTable/LeagueTable.module.scss
+++ b/frontend/src/Components/LeagueTable/LeagueTable.module.scss
@@ -62,8 +62,8 @@ $breakpoints: variables.$resolution-breakpoints;
             }
 
             @include media("<=phone") {
-                padding: 0.75rem 0.5rem;
-                font-size: 90%;
+                padding: 0.75rem 0.35rem;
+                font-size: 85%;
 
                 // max&min width for S U N D
                 &:nth-child(7),
